# libreorama

./: .gitignore  CMakeLists.txt  README.md  dependencies.txt
src/: audio.c  audio.h  channel.c  channel.h  controller.c  controller.h  effect.h  encode.c  encode.h  err.c  err.h  file.c  file.h  frame.c  frame.h  interval.c  interval.h  lbrerr.c  lbrerr.h  main.c  math.c  math.h  player.c  player.h  sequence.c  sequence.h  types.h
src/err/: al.c  al.h  lbr.c  lbr.h  sp.c  sp.h
src/lorinterface/: channel.c  channel.h  encode.c  encode.h  frame.c  frame.h  minify.c  minify.h  state.c  state.h
src/player/: audio.c  audio.h  player.c  player.h  sequence.c  sequence.h
src/player/seqtypes/: loredit.c  loredit.h  loreffect.c  loreffect.h  lormedia.c  lorparse.c  lorparse.h
src/seqtypes/: loredit.c  loredit.h  loreffect.c  loreffect.h  lormedia.c  lormedia.h  lorparse.c  lorparse.h
